# dart-lc0

./: .gitignore  README.md  fetchSources.sh  lc0.patch  lc0.podspec  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/lichess/: Lc0Plugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/stockfish_example/: MainActivity.kt
example/android/app/src/main/kotlin/lc0/example/: MainActivity.kt
example/android/app/src/main/kotlin/org/lichess/: MainActivity.kt
example/integration_test/: app_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/lib/: main.dart
ios/: lc0.podspec
ios/Classes/: Lc0Plugin.h  Lc0Plugin.mm
lib/: lc0.dart
lib/src/: ffi.dart  lc0.dart  lc0_state.dart
src/: build_id.h  ffi.cpp  ffi.h
